--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,16 +15,25 @@ body{
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     width: 400px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 0px 20px 20px;
     margin: 0 auto;
 }
-.date-picker-header{
+.date-picker-header-command{
+    border-bottom: 1px solid rgb(234, 234, 234);
+    padding: 10px 0;
+}
+.date-picker-header-command span, i{
+    color: rebeccapurple;
+    font-weight: 600;
+    cursor: pointer;
+}
+.flex{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(234, 234, 234);
+    gap: 5px;
 }
-.date-picker-header .icon{
+.date-picker-header-month .icon{
     font-size: 25px;
     cursor: pointer;
 }
@@ -33,7 +42,6 @@ body{
     border-radius: 5px;
     padding: 10px;
     width: 100%;
-    margin-top: 5px;
 }
 .date-picker-content th{
     color: red;
