--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ body{
 .date-picker-container{
     /* display: none; */
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-    width: 400px;
+    width: 450px;
     border-radius: 10px;
     padding: 0px 20px 20px;
     margin: 0 auto;
@@ -23,7 +23,7 @@ body{
     padding: 10px 5px;
 }
 .date-picker-header-command :is(span, i){
-    color: rebeccapurple;
+    color: royalblue;
     font-weight: 600;
     cursor: pointer;
 }
@@ -33,12 +33,14 @@ body{
     justify-content: space-between;
     gap: 5px;
 }
+.date-picker-header-month{
+    color: #2b2a2a;
+}
 .date-picker-header-month .icon{
     font-size: 25px;
     cursor: pointer;
 }
 .date-picker-content{
-    /* border: 1px solid #ddd; */
     border-radius: 5px;
     padding: 10px;
     width: 100%;
