--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,9 +13,9 @@ body{
 .date-picker-container{
     /* display: none; */
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-    width: 450px;
+    width: 500px;
     border-radius: 10px;
-    padding: 0px 20px 20px;
+    padding: 0px 5px 20px;
     margin: 0 auto;
 }
 .date-picker-header-command{
@@ -35,6 +35,7 @@ body{
 }
 .date-picker-header-month{
     color: #2b2a2a;
+    padding: 10px 10px 0;
 }
 .date-picker-header-month .icon{
     font-size: 25px;
@@ -42,7 +43,7 @@ body{
 }
 .date-picker-content{
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px 0;
     width: 100%;
 }
 .date-picker-content th{
@@ -51,6 +52,9 @@ body{
 }
 .date-picker-content tr{
     display: flex;
+    width: 90%;
+    margin: 0 auto;
+    user-select: none;
 }
 .date-picker-content th, .date-picker-content td{
   flex: 1;
@@ -63,9 +67,21 @@ body{
     border-radius: 6px;
     cursor: pointer;
     color: #4B5259;
+    line-height: 19px;
+    font-size: 14.5px;
+    font-weight: 500;
+}
+.date-picker-content td[date] p{
+    margin: 0;
+    font-size: 12px;
+    color: #959EA6;
 }
 .date-picker-content td.active{
     border: 0;
     background-color: royalblue;
     color: #fff;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 255, 0.1);
+}
+.date-picker-content td.active p{
+    color: #eeeaea;
 }
