--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,10 +13,12 @@ body{
 .date-picker-container{
     display: none;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
     width: 500px;
     border-radius: 10px;
     padding: 0px 5px 20px;
     margin: 0 auto;
+    position: absolute;
 }
 .date-picker-container.active{
     display: block;
@@ -107,4 +109,16 @@ body{
     font-family: isw;
     font-size: 16px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .date-picker-container{
+        width: 100%;
+        height: 100vh;
+        padding: 5px 0px;
+        margin: 0;
+        top: 0;
+        z-index: 999;
+        overflow: hidden;
+    }
 }
