--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,10 @@ body{
     color: #fff;
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 255, 0.1);
 }
+.date-picker-content td.today{
+    border: 1px solid royalblue;
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 255, 0.1);
+}
 .date-picker-content td.active p{
     color: #eeeaea;
 }
