--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
     font-family: isw;
     font-style: normal;
     font-weight: normal;
-    src: url('../fonts/isw/isw.woff');
+    src: url('/assets/fonts/isw/isw.woff');
     font-display: swap;
 }
 
@@ -12,6 +12,7 @@ body{
 
 .date-picker-container{
     display: none;
+    opacity: 0;
     box-shadow: 0px 3px 4px 1px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     width: 500px;
@@ -23,17 +24,32 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 99;
+   
 }
 .date-picker-container.active{
+    -webkit-animation:animate-date-picker-active .3s ease-in-out forwards; /* Chrome 16+, Safari 4+ */
+    -moz-animation: animate-date-picker-active .3s ease-in-out forwards;    /* FF 5+ */
+    -o-animation: animate-date-picker-active .3s ease-in-out forwards;      /* Not implemented yet */
+    -ms-animation:animate-date-picker-active .3s ease-in-out forwards;     /* IE 10+ */
+    animation: animate-date-picker-active .3s ease-in-out forwards ;
     display: block;
+}
+@keyframes animate-date-picker-active{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .date-picker-header-command{
     border-bottom: 1px solid rgb(234, 234, 234);
     padding: 15px 10px;
+    font-size: 15px;
 }
 .date-picker-header-command :is(span, i){
     color: royalblue;
-    font-weight: 600;
+    font-weight: 500;
     cursor: pointer;
 }
 .date-picker-header-command .icon-close{
@@ -51,8 +67,11 @@ body{
     color: #2b2a2a;
     padding: 10px 10px 0;
 }
+#monthHeaderTitle{
+    font-size: 17px;
+}
 .date-picker-header-month .icon{
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 500;
     cursor: pointer;
     transition: all .1s ease-in;
@@ -79,6 +98,7 @@ body{
 .date-picker-content th{
     color: #959EA6;
     font-size: 14px;
+    font-weight: 500;
 }
 .date-picker-content tr{
     display: flex;
@@ -159,8 +179,9 @@ body{
     background-color: royalblue;
     color: #fff;
     padding: 4px 25px;
-    font-family: isw;
-    font-size: 16px;
+    font-family: IRANSans;
+    font-size: 14px;
+    font-weight: 400;
     cursor: pointer;
 }
 
