fix: src font again

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
     font-family: isw;
     font-style: normal;
     font-weight: normal;
-    src: url('assets/fonts/isw/isw.woff');
+    src: url('../fonts/isw/isw.woff');
     font-display: swap;
 }
 
